
[ CORE. Make one suckerd to send emails ]

[ DOCS. SNMP with missing MIB files can be used by:
snmpget -On localhost public enterprises.ucdavis.memory.memTotalSwap.0]

[ CORE. All errors and warnings must be numbered and documented ]

[ CORE. zabbix_trapperd crashes when we kill zabbix_sender ! ]

[ CORE. Support for macros like {server:system[procload].graph(1)} ]

Changes for 1.0beta4:

 - authorisation without user name/password (Alexei)
 - default user "guest" (Alexei)
 - added table 'sessions' (Alexei)
 - added index triggers.value and trigger.status (Alexei)
 - added column alarms.value (Alexei)
 - removed column alarms.istrue (Alexei)
 - added columns triggers.status (Alexei)
 - added columns triggers.value (Alexei)
 - removed column triggers.istrue (Alexei)
 - support for --enable-static for ./configure (Alexei)
 - housekeeping period for alarms and alerts to be set in days (Alexei)
 - created directory upgrades/dbpatches/1.0beta3_to_1.0beta4 (Alexei)
 - more anvanced algorithm for updating disable_until field (Alexei)
 - problem with "Lost connection to DB" solved (Alexei)
 - function DBis_empty(), code cleanup (Alexei)
 - unreachable parameters will not be shown in Queue (Alexei)
 - support for check_service[service,port]
 - advanced change of host status in zabbix_suckerd (Alexei)
 - added support of UserParameter(s) returning non-numeric values (Alexei) 
 - doc/manual.lyx will not be included in Zabbix release (Alexei)
 - chnages to make Zabbix compile in non-GCC environments (Alexei)
 - unreachable hosts will be clickable in system maps (Alexei)
 - fixed double posting of the same trigger status into alarms (Alexei) 
 - fixed macros substitution in email alerts (Alexei)
 - removed option -Wall from all Makefiles (Alexei)
 - removed "//" comments from Zabbix code (Alexei)
 - disabled experimental code by commenting #define PERF (Alexei)
 - improvements in SNMP handling for zabbix_suckerd (Alexei)
 - fixed check for SNMP library in configure.in (Alexei)