@@ -7,7 +7,7 @@
 ?>
 
 <?
-        if(!check_right("Configuration of Zabbix","R",0))
+        if(!check_right("Configuration of Zabbix","W",0))
         {
                 show_table_header("<font color=\"AA0000\">No permissions !</font
 >");
