@@ -1,3 +1,5 @@
+update items set history=history/(24*3600);
+
 update config set alert_history=alert_history/(24*3600);
 update config set alarm_history=alarm_history/(24*3600);
 
